# feed-forward

./: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  .pre-commit-config.yaml  .sesskey  CLAUDE.md  CODE_QUALITY_ACTION_PLAN.md  CONTEXT.md  DEMO.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_PLAN.md  LINTING_STATUS.md  Makefile  OpenCode.md  README.md  SIGNAL_INTEGRATION_PLAN.md  STYLING_FIXES.md  TODO.md  app.py  app_themed.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fix-vps-permissions.sh  init_db_standalone.py  pyproject.toml  requirements.txt  setup-vps-env.sh  test_file_upload.py  test_ollama_connection.py  test_prompt_templates.py  test_upload.txt
.github/workflows/: ci.yml  release.yml
app/: __init__.py  init_db.py
app/assessment/: __init__.py  base.py  registry.py
app/assessment/handlers/: __init__.py  code.py  essay.py  math.py  video.py
app/models/: __init__.py  assessment.py  assignment.py  config.py  course.py  feedback.py  instructor_preferences.py  signal_rules.py  signals.py  user.py
app/routes/: __init__.py  admin.py  auth.py  docs.py  docs_improved.py  instructor.py  instructor_backup.py  instructor_conflict.py  instructor_old.py  legal.py  profile.py  student.py
app/routes/admin/: __init__.py  dashboard.py  domains.py  instructors.py  models.py
app/routes/instructor/: __init__.py  analytics.py  assignments.py  courses.py  dashboard.py  models.py  students.py  submissions.py
app/routes/student/: __init__.py  assignments.py  courses.py  dashboard.py  join.py  submissions.py
app/services/: background_tasks.py  evidence.py  feedback_generator.py  feedback_review.py  progress_analyzer.py  prompt_templates.py  rubric_generator.py  signal_calibration.py  signal_evidence.py  signal_rules_service.py  signal_scorer.py  signal_service.py  usage_report.py
app/utils/: __init__.py  ai_client.py  analyser_client.py  assignment_filter.py  auth.py  color_scheme.py  crypto.py  csv_export.py  db_query.py  design.py  email.py  feedback_formatter.py  feedback_orchestrator.py  feedback_pipeline.py  file_handlers.py  mailto.py  markdown_export.py  mock_feedback.py  privacy.py  rate_limit.py  theme.py  theme_example.py  ui.py
deploy/: Caddyfile  Caddyfile.example  README.md  apache.conf  docker-compose.yml  example-caddy-config.txt  feedforward.service  haproxy.cfg  nginx.conf  setup.sh  traefik.yml  update.sh
docs/: AI_Integration_Architecture.md  CODE_QUALITY_PLAN.md  DOCKER_DEPLOYMENT.md  LLM_PROVIDERS.md  LLM_SETUP_GUIDE.md  MODEL_ASSIGNMENT.md  PHASE_1_TASKS.md  PROJECT_OVERVIEW.md  README.md  VPS_DEPLOYMENT.md  _config.yml  auth-testing-guide.md  deployment.md  design-audit-2026-05.md  design.md  getting-started.md  index.md  legal.md  logins.md  privacy-policy.md  security-audit-2026-07.md  technical.md  terms-of-service.md  user-guides.md  web-ui.md
docs/adr/: 003-authentication-strategy.md  004-database-choice.md  005-ui-framework-selection.md  006-educational-workflow-architecture.md  007-educational-workflow-architecture.md  011-assessment-type-extensibility.md  012-signal-based-assessment-via-lens.md
docs/archive/: DEMO_QUICK.md  FUTURE_WORK.md  README_MIGRATION.md  REFACTORING_EXAMPLE.md  ROUTE_REFACTORING_GUIDE.md  TODO.md  feedforward-specification.md  mvp-technical-specification.md
docs/deployment/: configuration.md  installation.md  requirements.md  troubleshooting.md
docs/design/: assessment-type-schema-changes.md  direction-editorial-2026-07.md  mockups.md  overview.md
docs/design/adrs/: 000-adr-process.md  001-ai-model-ownership.md  002-data-lifecycle-management.md  003-authentication-strategy.md  006-student-enrollment-lifecycle.md  008-student-submission-privacy.md  009-api-key-management.md  010-model-instance-configuration.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/legal/: CONTRIBUTOR_LICENSE_AGREEMENT.md  third-party-licenses.md
docs/mockups/html/: feedback-history-html.html  (+5 more)
docs/technical/: ai-integration.md  api-reference.md  architecture.md  database-schema.md  privacy-security.md
practice/: README.md  pyproject.toml
practice/src/feedforward_practice/: __init__.py  api.py  cli.py  contracts.py  engine.py  manifest.py  providers.py  run.py
practice/src/feedforward_practice/contracts/: ffrubric.schema.json  levels.json
practice/tests/: test_api.py  test_engine.py  test_run.py
scripts/: docker-backup.sh  docker-dev.sh  docker-prod.sh  sidecars.sh
shared/: README.md  feedback-prompt.md
tests/: conftest.py  test_analyser_client.py  test_assessment_handler.py  test_assignment_filter.py  test_citation_signals.py  test_code_signals.py  test_csv_export.py  test_db_query.py  test_design.py  test_evidence.py  test_feedback_aggregation.py  test_feedback_review.py  test_instructor_submissions.py  test_markdown_export.py  test_password_verify.py  test_rate_limit.py  test_recommendations.py  test_route_smoke.py  test_shared_contracts.py  test_signal_calibration.py  test_signal_evidence.py  test_signal_rules_service.py  test_signal_scorer.py  test_signal_service.py  test_usage_report.py
tools/: README.md  check_llm_health.py  cleanup_drafts.py  create_demo_accounts.py  create_sample_data.py  create_sample_student_data.py  create_test_users.py  delete_user.py  fix_bare_excepts.py  fix_titled_issue.py  generate_licenses.py  init_db_standalone.py  migrate_ai_models.py  migrate_lifecycle_fields.py  refactor_fasthtml_imports.py  seed_domain_whitelist.py  setup_api_keys.py  tech_debt_tracker.py  test_ai_integration.py  test_auth_flows.py  test_email.py  test_env_email.py  test_file_upload.py  test_instructor_feedback_ui.py  test_prompt_templates.py  test_ses.py  test_smtp.py  test_tos_privacy.py
tools/archive/: create_test_users.py  fix_bare_excepts.py  fix_titled_issue.py  migrate_ai_models.py  refactor_fasthtml_imports.py  test_ai_integration.py  test_app_functionality.py  test_env_email.py  test_instructor_feedback_ui.py  test_ollama_connection.py  test_prompt_templates.py  test_tos_privacy.py  update_system_models.py
(+17 files in other folders)
