[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feedforward-practice"
version = "0.1.0"
description = "Private practice feedback on drafts against an instructor rubric (.ffrubric) — the FeedForward Desktop sidecar engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Borck", email = "michael@borck.dev" }]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
serve = [
    "lens-contract>=0.3.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
feedforward-practice = "feedforward_practice.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/feedforward_practice"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md"]

[tool.ruff]
line-length = 88
